--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build:prod": "cross-env npm run build",
-    "build": "cross-env react-scripts build",
+    "build:prod": "npm run build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
