--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Shards Dashboard Lite React",
-  "name": "Shards Dashboard Lite React",
+  "short_name": "2dayPlan",
+  "name": "2dayPlan - To Do Application for daily notes and tasker",
   "icons": [
     {
       "src": "favicon.ico",
