--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shards-dashboard-lite-react",
+  "name": "2dayPlan-frontend",
   "version": "1.0.0",
   "private": true,
   "homepage": "./",
