--- a/package.json
+++ b/package.json
@@ -5,23 +5,16 @@
   "homepage": "./",
   "dependencies": {
     "axios": "^0.19.0",
-    "camelize": "^1.0.0",
-    "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
-    "dateformat": "^3.0.3",
-    "flux": "^3.1.3",
-    "lodash.find": "^4.6.0",
     "moment": "^2.24.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-ga": "^2.5.6",
-    "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-toastify": "^5.2.1",
     "shards-react": "^1.0.0",
-    "shortid": "^2.2.14"
+    "validator": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
