--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "validator": "^11.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start:local": "sh -ac '. .env.local; react-scripts start'",
+    "start:prod": "sh -ac '. .env.production; react-scripts start'",
+    "build:local": "sh -ac '. .env.local; react-scripts build'",
+    "build:prod": "sh -ac '. .env.production; react-scripts build'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
