--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "validator": "^11.0.0"
   },
   "scripts": {
-    "start:local": "sh -ac '. .env.local; react-scripts start'",
-    "start:prod": "sh -ac '. .env.production; react-scripts start'",
-    "build:local": "sh -ac '. .env.local; react-scripts build'",
-    "build:prod": "sh -ac '. .env.production; react-scripts build'",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
